	  editor to Nuttx.  See http://apps.venomdev.net/hexed/.
	  Initial port is not functional (2015-11-21).
	* apps/fsutils/smartfs: Move into apps/fsutils from kernel, now
	  uses only open and ioctl.  From Ken Petit (2015-11-23).
	* apps/fsutils/smartfs/ and apps/nshlib/: Add configuration option
	  to supported multiple root directories. From Ken Petit (2015-11-23).
	* apps/nshlib:  Add support for 'basename' and 'dirname' commands
	  (2015-11-23).
	* apps/nshlib:  Like bash, NSH set command should strip off any
	  leading or trailing whitespace (2015-11-23).
	* apps/nshlib: The mount commands now accepts mount options (currently
	  needed only for the hostfs file system).  From Ken Petit (2015-11-25).
	* apps/nshlib:  NSH no longer calls losetup() and loteardown directly.
	  Now it opens /dev/loop and accomplishes these things using ioctl()
	  calls (2015-11-25).
	* apps/nshlib:  If CONFIG_NETDEV_STATISTICS=y, then print the network
	  driver statistics in the ifconfig (15-11-26).
	* apps/nshlib:  The 'ifconfig' command now uses /proc/net/<dev> to view
	  and network device configuration/status and /proc/net/stat to show
	  network statistics.  A consequence of this is that you cannot view
	  this network information if the procfs is not enabled and mounted at
	  /proc (2015-11-27).
	* apps/nshlib:  Remove all references to internal OS interface
	  netdev_foreach().  Logic in ifconfig, ifup, and ifown now use the
	  procfs file system to examine networking status.  (2015-11-27).
	* apps/nshlib:  Add a new NSH losmart command.  losmart setups up
	  a loop device for the smart MTD driver similar to losetup but
	  with different syntax.  From Ket Petit (2015-11-28).
	* apps/nshlib:  The I/O buffer, g_iobuffer, should not be a global
	  buffer.  That will not work in an environment where there are multiple
	  NSH sessions.  The I/O buffer must, instead, be a part part of the
	  session-specific data defined in nsh_console.h (2015-11-28).