@@ -341,8 +341,8 @@ config NSH_DISABLE_POWEROFF
 
 config NSH_DISABLE_PS
 	bool "Disable ps"
-	default n
-	depends on !BUILD_PROTECTED && !BUILD_KERNEL
+	default y if !FS_PROCFS || FS_PROCFS_EXCLUDE_PROCESS
+	default n if FS_PROCFS && !FS_PROCFS_EXCLUDE_PROCESS
 
 config NSH_DISABLE_PING
 	bool "Disable ping"
